--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body> 
     <!-- TODO 4: Add titles/subtitles etc. -->
     <h1>TUTO's Portfolio</h1>
-    <h2>I am a rookie web developer</h2>
+    <h2>I am a rookie web developer TUTO</h2>
     <hr />
     <!-- TODO 5: Add a link to the project pages -->
     <h3><a href="./public/MoviesTuto.html">Peliculas Tuto</a></h3>
