--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-    <meta chartset="UTF-8"> 
-    <title>Tuto's Photography</title> 
-</head> 
-<body> 
-    <!-- TODO 4: Add titles/subtitles etc. -->
-    <h1>TUTO's Portfolio</h1>
-    <h2>I am a rookie web developer TUTO</h2>
-    <hr />
-    <!-- TODO 5: Add a link to the project pages -->
-    <h3><a href="./public/MoviesTuto.html">Peliculas Tuto</a></h3>
-    <img src="./assets/images/TutoMovies.png" height="300" alt="Screenshot of the website of Tuto's favorite movies"/>
-    <h3><a href="./public/TutoBirthday.html">Cumple Tuto</a> </h3>
-    <img src="./assets/images/Birthday_Tuto.png" height="300" alt="Screenshot of my birthday website" />
-    <!-- TODO 7: Add the Contact Me and About Me page links --> 
-     <h4><a href="./public/contact.html">Contact me</a></h4><h4><a href="./public/about.html">About me</a></h4>
-</body> 
+
+<head>
+  <meta charset="UTF-8">
+  <title>Angela's Portfolio</title>
+</head>
+
+<body>
+  <h1>Angela Yu's Portfolio</h1>
+  <h2>I'm a Web Developer</h2>
+  <hr />
+  <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+  <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview"/>
+  <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+  <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
+  <hr />
+  <a href="./public/about.html">About Me</a>
+  <a href="./public/contact.html">Contact Me</a>
+</body>
+
 </html>
